# roverland

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json  tailwind.config.js
.github/workflows/: main.yml
config/: default.toml
content/: index.html  map.js
database/migrations/: init.sql
migrations/: create_db.sql  init.sql
src/: api.rs  app.rs  auth.rs  create_admin.rs  lib.rs  main.rs  register_token.rs  settings.rs
src/auth/: login.rs  middleware.rs  mod.rs  password_db.rs  register.rs
static/css/: output.css
static/login/: index.html
static/map/: index.html  map.js
static/register/: index.html
templates/: base.html  index.html  login.html  login_success.html  map.html  map.js  unauthorized.html
