[package]
name = "overland-client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "time" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.9", features = ["parsing", "macros"] }
config = "0.13.1"
