[package]
name = "overland-client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.1"
tokio = { version = "1.24", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "time", "offline" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.12"
tower-http = { version = "0.3", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.9", features = ["parsing", "macros"] }
config = "0.13.1"
argon2 = { version = "0.4.0" }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
rpassword = "6.0"
askama = { version = "0.11" }
clap = { version = "3.1", features = ["derive"] }
